--- a/shelter/pages/main/mainstyles.css
+++ b/shelter/pages/main/mainstyles.css
@@ -39,6 +39,12 @@ h5 {
   line-height: 110%;
   letter-spacing: 0.06rem;
 }
+b {
+  font-weight:bold;
+}
+button, button:active, button:focus {
+  outline: none;
+}
 
 .visually-hidden {
   position: absolute;
@@ -68,6 +74,9 @@ span {
   margin: 0 auto;
   height: 60px;
 }
+a {
+  text-decoration: none;
+}
 .logo {
   display: flex;
   flex-direction: column;
@@ -90,6 +99,9 @@ span {
   font-weight: 400;
   letter-spacing: 0.09rem;
   line-height: 35px;
+}
+.nav__btn {
+  display: none;
 }
 
 .menu {
@@ -252,12 +264,21 @@ button:hover {
   line-height: 130%;
   letter-spacing: 0.06em;
 }
-.friends__img__wrapper {
+.slider__wrapper {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 60px 0;
+}
+.cards__container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  /* position: relative; */
+  justify-content: space-between;
+  margin: 0 auto;
+  /* padding-top: 15px; */
 }
 .pet__slider__arrow {
   width: 52px;
@@ -516,6 +537,144 @@ button:hover {
   display: block;
   /* position: relative; */
 }
+.popup {
+  display: none;
+  line-height: 1;
+  font-size: 14px;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  width: 900px;
+  height: 500px;
+  justify-content: space-between;
+  position: fixed;
+  top: 300px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background: #FAFAFA;
+  border-radius: 9px;
+  z-index: 100;
+}
+.shadow {  
+  display: none;
+  background: rgba(41, 41, 41, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+}
+.shadow:hover {  
+  cursor: pointer;
+}
+.popup__close {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  box-sizing: border-box;
+  border-radius: 50%;
+  position: absolute;
+  top: -52px;
+  left: 890px;
+  padding: 18px;
+  cursor: pointer;
+  user-select: none;
+ 
+}
+.popup__close:hover {
+  background: #FDDCC4;
+  border: 2px solid #FDDCC4;
+}
+.popup__container {
+  height: 500px;
+  width: 500px;
+  border-bottom-left-radius: 9px;
+  overflow: hidden;
+  border-top-left-radius: 9px;
+}
+.popup__img {
+  max-width: 100%;
+  height: 100%;
+}
+.popup__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 370px;
+  padding: 51px 0 89px;
+}
+.popup__head {
+  height: 77px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.popup__title {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__sub {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__text {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 17px;
+  letter-spacing: 0.06em;
+  color: #000000;
+  width: 350px;
+}
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+  padding: 0;
+}
+.popup__info {
+height: 100px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+.popup__item {
+color: #F1CDB3;
+list-style: inside;
+display: list-item;
+text-align: -webkit-match-parent;
+list-style-position: inside;
+text-indent: -1em;
+padding-left: 1em;
+}
+.popup__item > span {
+  display: inline;
+  font-family: Georgia;
+  /* font-style: normal;*/ 
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  word-spacing: 0px;
+  margin-left: -5px;
+  color: #000000;
+} 
 
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
@@ -534,6 +693,19 @@ button:hover {
   margin: 0 auto;
   height: 60px;
 }
+/* .menu{
+  transition-duration: 1s;
+  z-index: 1;
+  position: absolute;
+  right: -320px;
+  top: 0px;
+  width: 320px;
+  height: 100%;
+  background: #292929;
+  display: flex;
+  /* margin: 0px 00px 0px 0px;
+  align-items: center; 
+} */
 .hero {
   display: flex;
   width: 100%;
@@ -641,11 +813,11 @@ button:hover {
 .arrow__right {
   transform: rotate(180deg);
   margin: 0px 0px 0px -8px;
-  order: 3; 
+  /* order: 3;  */
 }
 .arrow__left{
   margin: 0px -8px 0px 0px;
-  order: 1; 
+  /* order: 1;  */
 }
 .help {
   display: flex;
@@ -743,9 +915,101 @@ button:hover {
   padding-top: 2px;
   /* position: relative; */
 }
+.popup {
+  width: 630px;
+  height: 350px;
+}
+.popup__close {
+  left: 616px;
+}
+.popup__container {
+  height: 350px;
+  width: 350px;
+}
+.popup__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 260px;
+  height: 350px;
+  padding: 10px 0 37px; 
+  margin-right: 9px;
+  
+}
+.popup__head {
+  height: 77px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.popup__title {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__sub {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__text {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 14.3px;
+  letter-spacing: 0.06em;
+  color: #000000;
+  width: 260px;
+  height: 98px;
+}
+ul {
+display: block;
+list-style-type: disc;
+margin-block-start: 0;
+margin-block-end: 0;
+margin-inline-start: 0;
+margin-inline-end: 0;
+padding-inline-start: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+.popup__info {
+height: 87px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+.popup__item {
+color: #F1CDB3;
+list-style: inside;
+display: list-item;
+text-align: -webkit-match-parent;
+list-style-position: inside;
+text-indent: -1em;
+padding-left: 1em;
+}
+.popup__item > span {
+display: inline;
+font-family: Georgia;
+font-style: normal; 
+font-size: 15px;
+line-height: 110%;
+letter-spacing: 0.06em;
+word-spacing: -4px;
+margin-left: -5px;
+color: #000000;
+}
+}
+
+@media screen and (min-width: 0) and (max-width: 767px) {
   span {
     display: inline;
   }
@@ -754,15 +1018,110 @@ button:hover {
    justify-content: flex-start;
    width: 100%;
    position: absolute;
-   padding-right: 57px;
+   padding-right: 50px;
    padding-left: 3%;
    top: 30px;
  }
  .header_container {
   width: 100%; 
  }
- .menu {
+.header_container__mobile {
+  background: #878787;
+  z-index: 10;
+}
+.nav__btn {
+  display: block;
+  transition-duration: 1s;
+  z-index: 10;
+  width: 30px;
+  height: 22px;
+  /* margin: 4px 43px 0px 0px; */
+  background-image: url(../../assets/icons/Burger2.png);
+}
+.nav__btn:hover {
+  cursor: pointer;
+}
+.nav__btn__active {
+  position: absolute;
+  transform: rotate(90deg);
+  transition-duration: 1s;
+  right: 50px;
+  top: 22px;
+  z-index: 11;
+}
+.logo:hover {
+  cursor: pointer;
+}
+.logo__mobile__active {
+  position: fixed;
+  right: 121px;
+  top: 26px;
+  transition: right 1s;
+  transition-duration: 1s;
+  z-index: 11;
+}
+.shadow {  
   display: none;
+  background: rgba(41, 41, 41, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 5;
+}
+.menu{
+  /* transition-duration: 1s;
+  z-index: 1;
+  position: absolute;
+  right: -320px;
+  top: 0px;
+  width: 320px;
+  height: 100%;
+  background: #292929; */
+  display: none;
+  /* margin: 0px 00px 0px 0px;
+  align-items: center; */
+}
+ul {
+  /* display: block; */
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
+.menu-list {
+  display: none;
+}
+.menu-list_active {
+  display: flex;
+  color: #CDCDCD;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  right: 0px;
+  height: 823px;
+  background: #292929;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 320px;
+  align-items: center;
+  padding: 250px 0 247px;
+  transition: right 1s;
+  overflow: hidden;
+}
+.menu-list > li {
+  margin-top: 32px;
+}
+
+.item_link {
+  font-size: 32px;
+  color: #CDCDCD;
+}
+.item_link_active {
+  color: #FAFAFA;
 }
 .hero {
   display: flex;
@@ -882,17 +1241,17 @@ button:hover {
   text-align: center;
   width: 97%;
 }
-.friends__img__wrapper {
+.slider__wrapper {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 42px 0 21px 0;
 }
-.pet__tablet, .pet__mobile{
+/* .pet__tablet, .pet__mobile{
   display: none;
-}
+} */
 .pet__slider__arrow {
   width: 52px;
   height: 52px;
@@ -903,7 +1262,7 @@ button:hover {
 .arrow__right {
   transform: rotate(180deg);
   margin: 20px 58px 20px 40px;
-  order: 2; 
+  order: 3; 
 }
 .arrow__left{
   margin: 20px 40px 20px 58px;
@@ -1117,6 +1476,101 @@ button:hover {
   /* display: block; */
   width: 260px;
   margin: 0 auto;
+}
+.popup {
+  width: 248px;
+  height: 345px;
+}
+.popup__close {
+  left: 237px;
+}
+.popup__container {
+  display: none;
+}
+.popup__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  width: 232px;
+  height: 335px;
+  padding: 0; 
+  margin: auto;
+}
+.popup__head {
+  width: 100%;
+  height: 77px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  text-align: center;
+}
+.popup__title {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 33px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__sub {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__text {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 14.3px;
+  letter-spacing: 0.06em;
+  color: #000000;
+  width: 220px;
+  text-align: justify;
+  margin: 0 auto;
+}
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
+.popup__info {
+  height: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 9px;
+}
+.popup__item {
+  color: #F1CDB3;
+  list-style: inside;
+  display: list-item;
+  text-align: -webkit-match-parent;
+  list-style-position: inside;
+  text-indent: -1em;
+  padding-left: 1em;
+}
+.popup__item > span {
+  display: inline;
+  font-family: Georgia;
+  font-style: normal; 
+  font-size: 14px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  word-spacing: 0;
+  margin-left: -5px;
+  color: #000000;
 }
 
 }
