--- a/shelter/pages/pets/petstyles.css
+++ b/shelter/pages/pets/petstyles.css
@@ -11,6 +11,7 @@
   html, body {
     width: 100vw;
     height: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
   }
@@ -40,6 +41,9 @@
     line-height: 110%;
     letter-spacing: 0.06rem;
   }
+  b {
+    font-weight:bold;
+  }
   a {
     text-decoration: none;
   }
@@ -55,6 +59,10 @@
     margin: -1px;
   }
 
+  button, button:active, button:focus {
+    outline: none;
+  }
+
   .header {
     display: flex;
     width: 100%;
@@ -63,6 +71,7 @@
     background: #ffffff;
     padding-top: 30px;
     padding-bottom: 30px;
+    /* z-index: 1; */
   }
   .header_container {
     display: flex;
@@ -128,7 +137,11 @@
   }
   .item_link:hover {
     color: #292929;
+    cursor: pointer;
   }
+  /* .item_link_disabled:hover {
+    cursor: default;
+  } */
   
   .main {
     display: flex;
@@ -166,10 +179,20 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    /* position: relative; */
     justify-content: space-between;
     margin: 45px auto;
     /* padding-top: 15px; */
   }
+  /* .pet__hidden {
+    width: 100%;
+    height: 930px;
+    border-top: 35px solid white;
+    border-bottom: 1000vh solid white;
+    position: absolute;
+    top: 0;
+  } */
+
   .pet__card {
     display: flex;
     flex-direction: column;
@@ -216,6 +239,7 @@
   .pet__card__button:hover {
     background-color: #FDDCC4;
     border: none;
+    cursor: pointer;
   }
   .pets__nav__bar {
     display: flex;
@@ -318,18 +342,151 @@
   .footer__img {
     display: block;
   }
+  .popup {
+    display: none;
+    line-height: 1;
+    font-size: 14px;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    width: 900px;
+    height: 500px;
+    justify-content: space-between;
+    position: fixed;
+    top: 300px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background: #FAFAFA;
+    border-radius: 9px;
+    z-index: 100;
+  }
+  .shadow {  
+    display: none;
+    background: rgba(41, 41, 41, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 5;
+  }
+  .shadow:hover {  
+    cursor: pointer;
+  }
+  .popup__close {
+    width: 52px;
+    height: 52px;
+    border: 2px solid #F1CDB3;
+    box-sizing: border-box;
+    border-radius: 50%;
+    position: absolute;
+    top: -52px;
+    left: 890px;
+    padding: 18px;
+    cursor: pointer;
+    user-select: none;
+   
+  }
+  .popup__close:hover {
+    background: #FDDCC4;
+    border: 2px solid #FDDCC4;
+  }
+  .popup__container {
+    height: 500px;
+    width: 500px;
+    border-bottom-left-radius: 9px;
+    overflow: hidden;
+    border-top-left-radius: 9px;
+  }
+  .popup__img {
+    max-width: 100%;
+    height: 100%;
+  }
+  .popup__row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 370px;
+    padding: 51px 0 89px;
+  }
+  .popup__head {
+    height: 77px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.popup__title {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__sub {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.popup__text {
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 17px;
+  letter-spacing: 0.06em;
+  color: #000000;
+  width: 350px;
+}
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+  padding: 0;
+}
+.popup__info {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.popup__item {
+  color: #F1CDB3;
+  list-style: inside;
+  display: list-item;
+  text-align: -webkit-match-parent;
+  list-style-position: inside;
+  text-indent: -1em;
+  padding-left: 1em;
+}
+.popup__item > span {
+  font-family: Georgia;
+  /* font-style: normal;*/ 
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  word-spacing: 0px;
+  margin-left: -5px;
+  color: #000000;
+} 
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+
+ @media screen and (min-width: 768px) and (max-width: 1279px) {
   
     .header_container {
       margin: 0 1.875rem;
     }
-    /* .main {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      padding-top: 120px;
-    } */
+    
     .pets {
       background: #F6F6F6;
       display: flex;
@@ -396,14 +553,201 @@
       padding-top: 2px;
       /* position: relative; */
     }
+    .popup {
+      width: 630px;
+      height: 350px;
+    }
+    .popup__close {
+      left: 616px;
+    }
+    .popup__container {
+      height: 350px;
+      width: 350px;
+    }
+    .popup__row {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 260px;
+      height: 350px;
+      padding: 10px 0 37px; 
+      margin-right: 9px;
+      
+    }
+    .popup__head {
+      height: 77px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .popup__title {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 35px;
+      line-height: 130%;
+      letter-spacing: 0.06em;
+      color: #000000;
+    }
+    .popup__sub {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 115%;
+      letter-spacing: 0.06em;
+      color: #000000;
+    }
+    .popup__text {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 14.3px;
+      letter-spacing: 0.06em;
+      color: #000000;
+      width: 260px;
+      height: 98px;
+    }
+  ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0;
   }
+  
+  .popup__info {
+    height: 87px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .popup__item {
+    color: #F1CDB3;
+    list-style: inside;
+    display: list-item;
+    text-align: -webkit-match-parent;
+    list-style-position: inside;
+    text-indent: -1em;
+    padding-left: 1em;
+  }
+  .popup__item > span {
+    font-family: Georgia;
+    font-style: normal; 
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    word-spacing: -4px;
+    margin-left: -5px;
+    color: #000000;
+  } 
+ }
 
-  @media screen and (min-width: 320px) and (max-width: 767px) {
+  @media screen and (min-width: 0) and (max-width: 767px) {
+    .header_mobile {
+      position: absolute;
+      background: rgba(255, 255, 255, 0);
+      /* z-index: 1;  */
+    }
     .header_container {
       margin: 0 0.625rem;
     }
     .menu {
       display: none;
+    }
+    .nav__btn {
+      display: block;
+      transition-duration: 1s;
+      z-index: 10;
+      width: 30px;
+      height: 22px;
+      margin-right: 30px;
+      background-image: url(../../assets/icons/Burger1.png);
+    }
+    .nav__btn:hover {
+      cursor: pointer;
+    }
+    .nav__btn__active {
+      background-image: url(../../assets/icons/Burger2.png);
+      position: absolute;
+      transform: rotate(90deg);
+      transition-duration: 1s;
+      right: 14px;
+      top: 46px;
+      z-index: 11;
+    }
+    .logo__mobile__active {
+      position: fixed;
+      right: 121px;
+      top: 26px;
+      transition: right 1s;
+      transition-duration: 1s;
+      z-index: 11;
+    }
+    .logo-title__mobile-menu {
+      color: var(--main-color);
+      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-size: 2rem;
+      font-weight: 400;
+      letter-spacing: 0.11rem;
+      line-height: 35px;
+      z-index: 12;
+    }
+    .logo-subtitle__mobile-menu {
+      color: #ffffff;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 0.09rem;
+      line-height: 35px;
+      z-index: 12;
+    }
+    .menu-list {
+      display: none;
+    }
+    .menu-list_active {
+      display: flex;
+      color: #CDCDCD;
+      position: fixed;
+      z-index: 10;
+      top: 0;
+      right: 0px;
+      height: 823px;
+      background: #292929;
+      justify-content: space-between;
+      flex-direction: column;
+      width: 320px;
+      align-items: center;
+      padding: 250px 0 247px;
+      transition: right 1s;
+      overflow: hidden;
+    }
+    .menu-list > li {
+      margin-top: 32px;
+    }
+    .item_link {
+      font-size: 32px;
+      color: #CDCDCD;
+    }
+    .item_link_active {
+      color: #FAFAFA;
+    }
+    .item_link:hover {
+      color: #FAFAFA;
+      cursor: pointer;
+    }
+    .shadow {  
+      display: none;
+      background: rgba(41, 41, 41, 0.6);
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      z-index: 5;
     }
     h3 {
       color: #545454;
@@ -445,10 +789,6 @@
     .pet__mobile {
       display: none;
     }
-
-
-
-
     .footer {
       display: flex;
       justify-content: center;
@@ -512,8 +852,99 @@
       width: 260px;
       margin: 0 auto;
     }
-
-
-
-  }
-  
+    .popup {
+      width: 248px;
+      height: 345px;
+    }
+    .popup__close {
+      left: 237px;
+    }
+    .popup__container {
+      display: none;
+    }
+    .popup__row {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-content: center;
+      width: 232px;
+      height: 335px;
+      padding: 0; 
+      margin: auto;
+    }
+    .popup__head {
+      width: 100%;
+      height: 77px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-content: center;
+      text-align: center;
+    }
+    .popup__title {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 33px;
+      line-height: 130%;
+      letter-spacing: 0.06em;
+      color: #000000;
+    }
+    .popup__sub {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 115%;
+      letter-spacing: 0.06em;
+      color: #000000;
+    }
+    .popup__text {
+      font-family: Georgia;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 14.3px;
+      letter-spacing: 0.06em;
+      color: #000000;
+      width: 220px;
+      text-align: justify;
+      margin: 0 auto;
+    }
+    ul {
+      display: block;
+      list-style-type: disc;
+      margin-block-start: 0;
+      margin-block-end: 0;
+      margin-inline-start: 0;
+      margin-inline-end: 0;
+      padding-inline-start: 0;
+    }
+    .popup__info {
+      height: 90px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-bottom: 9px;
+    }
+    .popup__item {
+      color: #F1CDB3;
+      list-style: inside;
+      display: list-item;
+      text-align: -webkit-match-parent;
+      list-style-position: inside;
+      text-indent: -1em;
+      padding-left: 1em;
+    }
+    .popup__item > span {
+      font-family: Georgia;
+      font-style: normal; 
+      font-size: 14px;
+      line-height: 110%;
+      letter-spacing: 0.06em;
+      word-spacing: 0;
+      margin-left: -5px;
+      color: #000000;
+    }
+    
+  }   
